Verion 0.9.45dev (?? ??? 2004)
  - Removing blank lines from the end of files
  - Temporarily disabling the print-media stylesheet
  - Fixing a TON of bugs in almost all of the views NOTE: view_m, day, and
  week.php are in need of a major php code overhaul to fix some of the
  remaining bugs
  - Fixed bug 1060764: forgot to add translation stuff to "public access" in
  trailer
  - Fixed bug 1060779: also forgot to translation stuff for "preview" views
  - Fixing bug 1060784: "category" id in functions.php because it caused a conflict with category.php
  - Added a favicon.ico and supporting code
  - Adding new edit_entry & admin.php code (tabbed GUI)
  - Made view_entry reminders statement use singular/plural days, hours & minutes as needed
  - Added title attributes in activity_log.php
  - Cleaning up HTML & CSS
  - Updated view-preview doc with more modular code
  - Adding additional save button in pref.php to mirror admin.php
  - Extending admin.php to pref.php
  - Modifying class 'navlinks' to now read just 'nav'
  - Adding patch 1059984: alternating row colors for activity_log.php
  - Removing obsolete styles from styles.php
  - Adding title attributes to various links
  - Moving & making login/logout link to be inline with current user in
  trailer & dynamic depending on if user is logged in or not
  - Updating upgrading docs with easier to read code areas
  - Added patch 1059130: minical function implementation
  - Added patch 1016648: datesel.php when global vars=off
  - Added patch 1045008: Weekly (Users vertical) view colors
  - Cleaning up styles.php
  - Bringing views up to date
  - Applying print-media patch. Credit to Adam Roben.
  - Fixed bug causing today link not to work when not logged in
  - Fixed Bug 1057889: Public events duplicated in month view (view_t.php)
  - Fixed Bug 1057887: Month view (view_t.php) doubles last sunday in October (DST)
  - Fixed Bug 983139: fix date in notice for single deleted item from repeating